--- a/Main/SEToolbox/SEToolbox/Views/WindowImportImage.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowImportImage.xaml
@@ -48,7 +48,7 @@
                 <Label Content="{lex:Loc WnImportImageLabelImage}" />
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
                     <TextBox Width="180" Text="{Binding Filename, Mode=TwoWay}" VerticalAlignment="Center" Name="uxInitialElement"/>
-                    <Button ToolTip="Browse for Image" Command="{Binding BrowseImageCommand}" VerticalAlignment="Center">
+                    <Button ToolTip="{lex:Loc WnImportImageBtnBrowseImageTooltip}" Command="{Binding BrowseImageCommand}" VerticalAlignment="Center">
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=folder}" />
                     </Button>
                 </StackPanel>
