#103 Fixed Character Oxygen levels. Added Character Hydogen levels.

--- a/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCharacter.xaml
@@ -64,6 +64,7 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Label Grid.Column="0" Grid.Row="2" Content="{lex:Loc CtlCharacterSuitColor}"/>
@@ -116,7 +117,7 @@
                             <Image Grid.Column="1" Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=battery}" />
                             <Slider Grid.Column="2" Value="{Binding BatteryCapacity}" Minimum="0" Maximum="1" SmallChange=".01" LargeChange=".1"/>
                         </Grid>
-                        <Label Grid.Column="0" Grid.Row="9" Content="{lex:Loc CtlCharacterOxygen}"/>
+                        <Label Grid.Row="9" Grid.Column="0" Content="{lex:Loc CtlCharacterOxygen}"/>
                         <Grid Grid.Row="9" Grid.Column="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="80"/>
@@ -132,10 +133,33 @@
                                     </Binding>
                                 </TextBox.Text>
                             </TextBox>
-                            <Label Grid.Column="1">O₂</Label>
+                            <Label Grid.Column="1" Content="{lex:Loc CtlCharacterOxygenGasSymbol}" />
                             <Slider Grid.Column="2" Value="{Binding OxygenLevel}" Minimum="0" Maximum="1" SmallChange=".01" LargeChange=".1"/>
                         </Grid>
-                        <Button Grid.Column="0" Grid.Row="10" Content="{lex:Loc CtlCharacterBtnSpeed}" HorizontalAlignment="Left" Style="{StaticResource DropDownMenuButton}">
+
+                        <Label Grid.Row="10" Grid.Column="0" Content="{lex:Loc CtlCharacterHydrogen}"/>
+                        <Grid Grid.Row="10" Grid.Column="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="80"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox VerticalAlignment="Center" Style="{StaticResource textBoxInError}">
+                                <TextBox.Text>
+                                    <Binding Path="HydrogenLevel" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" >
+                                        <Binding.ValidationRules>
+                                            <converters:RangeRuleD Min="0" Max="1"/>
+                                        </Binding.ValidationRules>
+                                    </Binding>
+                                </TextBox.Text>
+                            </TextBox>
+                            <Label Grid.Column="1" Content="{lex:Loc CtlCharacterHydrogenGasSymbol}" />
+                            <Slider Grid.Column="2" Value="{Binding HydrogenLevel}" Minimum="0" Maximum="1" SmallChange=".01" LargeChange=".1"/>
+                        </Grid>
+
+
+
+                        <Button Grid.Column="0" Grid.Row="11" Content="{lex:Loc CtlCharacterBtnSpeed}" HorizontalAlignment="Left" Style="{StaticResource DropDownMenuButton}">
                             <i:Interaction.Behaviors>
                                 <commands:ButtonDropDownMenuBehavior />
                             </i:Interaction.Behaviors>
@@ -154,17 +178,17 @@
                                 </ContextMenu>
                             </Button.ContextMenu>
                         </Button>
-                        <TextBlock Grid.Row="10" Grid.Column="1" VerticalAlignment="Center">
+                        <TextBlock Grid.Row="11" Grid.Column="1" VerticalAlignment="Center">
                                 <Run Text="{Binding LinearVelocity, StringFormat='#,###0.000', Mode=OneWay}" />
                                 <Run Text="{lex:Loc GlobalSIVelocityMetresPerSecond}" />
                         </TextBlock>
-                        <Separator Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2"/>
-                        <Label Grid.Column="0" Grid.Row="12" Content="{lex:Loc CtlCharacterPilot}"/>
-                        <TextBlock Grid.Row="12" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPilot}" />
-                        <Label Grid.Column="0" Grid.Row="13" Content="{lex:Loc CtlCharacterPlayer}"/>
-                        <TextBlock Grid.Row="13" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPlayer}" />
-                        <Label Grid.Column="0" Grid.Row="14" Content="{lex:Loc CtlCharacterDistance}"/>
-                        <TextBlock Grid.Row="14" Grid.Column="1" VerticalAlignment="Center">
+                        <Separator Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2"/>
+                        <Label Grid.Row="13" Grid.Column="0" Content="{lex:Loc CtlCharacterPilot}"/>
+                        <TextBlock Grid.Row="13" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPilot}" />
+                        <Label Grid.Row="14" Grid.Column="0" Content="{lex:Loc CtlCharacterPlayer}"/>
+                        <TextBlock Grid.Row="14" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPlayer}" />
+                        <Label Grid.Row="15" Grid.Column="0" Content="{lex:Loc CtlCharacterDistance}"/>
+                        <TextBlock Grid.Row="15" Grid.Column="1" VerticalAlignment="Center">
                             <Run Text="{Binding PlayerDistance, StringFormat='#,###0.0', Mode=OneWay}" />
                             <Run Text="{lex:Loc GlobalSIDistanceMetre}" />
                         </TextBlock>
