--- a/Main/SEToolbox/SEToolbox/Views/WindowProgressCancel.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowProgressCancel.xaml
@@ -36,7 +36,7 @@
                 </StackPanel>
                 <TextBlock Grid.Row="1" Height="50" TextWrapping="Wrap" Margin="0,8,0,8">
                     <Run Text="{lex:Loc WnProgressTxtTimeRemain}"/>
-                    <Run Text="{Binding EstimatedTimeLeft, StringFormat='d'}"/>
+                    <Run Text="{Binding EstimatedTimeLeft, StringFormat='{}{0:%d}'}"/>
                     <Run Text="{lex:Loc GlobalTimeDays}"/>
                     <Run Text="{Binding EstimatedTimeLeft, StringFormat='hh\\:mm\\:ss'}"/>
                 </TextBlock>
