--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -470,14 +470,14 @@
                                     --><!-- TODO: Property Editor? --><!--
                                 </TabItem>-->
                                 <TabItem Header="{Binding Path=SelectedCubeItem.Inventory[0].Name, FallbackValue={x:Null}}" Visibility="{Binding Path=SelectedCubeItem.Inventory[0].IsValid, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Hidden}">
-                                    <StackPanel Visibility="{Binding Path=SelectedCubeItem.Inventory[0].IsValid, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Hidden}">
+                                    <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="Auto" Visibility="{Binding Path=SelectedCubeItem.Inventory[0].IsValid, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Hidden}">
                                         <views:ControlInventory DataContext="{Binding Path=SelectedCubeItem.Inventory[0]}" />
-                                    </StackPanel>
+                                    </DockPanel>
                                 </TabItem>
                                 <TabItem Header="{Binding Path=SelectedCubeItem.Inventory[1].Name, FallbackValue={x:Null}}" Visibility="{Binding Path=SelectedCubeItem.Inventory[1].IsValid, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Hidden}">
-                                    <StackPanel Visibility="{Binding Path=SelectedCubeItem.Inventory[1].IsValid, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Hidden}">
+                                    <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="Auto"  Visibility="{Binding Path=SelectedCubeItem.Inventory[1].IsValid, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Hidden}">
                                         <views:ControlInventory DataContext="{Binding Path=SelectedCubeItem.Inventory[1]}" />
-                                    </StackPanel>
+                                    </DockPanel>
                                 </TabItem>
                             </TabControl>
                             <StackPanel Grid.Row="2">
