--- a/Main/SEToolbox/SEToolbox/Views/WindowSettings.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowSettings.xaml
@@ -69,6 +69,6 @@
                 </StackPanel>
             </Grid>
         </Grid>
-        <controls:BusyIndicator Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <controls:BusyIndicator Visibility="{Binding IsBusy, FallbackValue=Hidden, Converter={StaticResource BooleanToVisibilityConverter}}" />
     </Grid>
 </Window>
