--- a/Main/SEToolbox/SEToolbox/Views/WindowVoxelMerge.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowVoxelMerge.xaml
@@ -245,6 +245,6 @@
                 </StackPanel>
             </Grid>
         </Grid>
-        <controls:BusyIndicator Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <controls:BusyIndicator Visibility="{Binding IsBusy, FallbackValue=Hidden, Converter={StaticResource BooleanToVisibilityConverter}}" />
     </Grid>
 </Window>
