Update to color RGB/HSV conversion to match the in game Palette picker colors. Encounted some issues around floating point abberation and used decimal instead for calculations, so I'm unsure how much impact this will have on the performance. UI Tweak to show more color in the grid. Thanks to Whiplash141 for the direction.

--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -398,7 +398,7 @@
                                             </controls:SortableGridViewColumn.SortBinding>
                                             <GridViewColumn.CellTemplate>
                                                 <DataTemplate>
-                                                    <Border Width="16" Height="16" Background="{Binding Color}" BorderBrush="Black" BorderThickness="1" ToolTip="{Binding ColorText}" />
+                                                    <Border HorizontalAlignment="Stretch" Height="18" Background="{Binding Color}" BorderBrush="Transparent" BorderThickness="0" ToolTip="{Binding ColorText}" />
                                                 </DataTemplate>
                                             </GridViewColumn.CellTemplate>
                                         </controls:SortableGridViewColumn>
