--- a/Main/SEToolbox/SEToolboxSetup/Product.wxs
+++ b/Main/SEToolbox/SEToolboxSetup/Product.wxs
@@ -59,6 +59,7 @@
               <RemoveFile Id="file0B63627F3DDC47E58FB0BCCB65B110BC" Name="steam_api64.dll" On="install"/>
               <RemoveFile Id="file26225324B8BC443AB0B4DE7161E48FCF" Name="SteamSDK.dll" On="install"/>
               <RemoveFile Id="fileEA4AE319577E449E9D1DF59BC1B6D3F0" Name="VRage.dll" On="install"/>
+              <RemoveFile Id="file19B8CCCE91F040CCB983B44C7334821A" Name="VRage.Ansel.dll" On="install"/>
               <RemoveFile Id="file34F2B15981F041C7A1EB6FCF29C72BC1" Name="VRage.Audio.dll" On="install"/>
               <RemoveFile Id="file0F16284F3E2D4C5CA5402B757C4951D1" Name="VRage.Game.dll" On="install"/>
               <RemoveFile Id="fukeD6616ECAB0004D46AE4DBA393C53F0ED" Name="VRage.Game.XmlSerializers.dll" On="install"/>
