Remove ICSharpZipLib useage and replacing some calls. This is a partial use of PR from dodexahedron.

--- a/Main/SEToolbox/SEToolboxSetup/Product.wxs
+++ b/Main/SEToolbox/SEToolboxSetup/Product.wxs
@@ -72,6 +72,10 @@
               <RemoveFile Id="fileFCCDCA64927F4EEDB783F6D983838557" Name="VRage.Render11.dll" On="install"/>
               <RemoveFile Id="file907C5A94D3964E7C86FF6FD07B8A46EA" Name="System.Data.SQLite.dll" On="install"/>
 
+              <!--Obsolete. To be removed in the future. Retained temporarily for the installer to cleanup. -->
+              <RemoveFile Id="file4CCC1D5F89354510910F24ECF6734F72" Name="ICSharpCode.SharpZipLib.dll" On="install"/>
+
+
               <RegistryKey Root="HKLM" Key="Software\MidSpace\SEToolbox">
                 <RegistryValue Id="SEToolboxRegInstallDir" Type="string" Name="InstallDir" Value="[APPLICATIONFOLDER]" />
               </RegistryKey>
@@ -141,9 +145,6 @@
       <!-- Third party dependancies -->
       <Component Id="comp5B10E5BF2D0D4C9EAF44EDE183D113EF">
         <File Id="fileAD5B37B3F8524F6594A80B1BF9660D69" Source="$(var.SEToolbox.TargetDir)HelixToolkit.Wpf.dll"/>
-      </Component>
-      <Component Id="compEDC13D521AB34560924EFE013C7BCC58">
-        <File Id="file4CCC1D5F89354510910F24ECF6734F72" Source="$(var.SEToolbox.TargetDir)ICSharpCode.SharpZipLib.dll"/>
       </Component>
       <Component Id="comp5F8887E0899A41C3BD1CEDFFC18A4FD1">
         <File Id="file1E207785088F43BABB001B75AA97C567" Source="$(var.SEToolbox.TargetDir)log4net.dll"/>
