--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -136,6 +136,11 @@
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=export}" />
                         </MenuItem.Icon>
                     </MenuItem>
+                    <MenuItem Header="{lex:Loc WnExplorerMnuExportBlueprint}" Command="{Binding ExportBlueprintCommand}" ToolTip="{lex:Loc WnExplorerMnuExportBlueprintTooltip}">
+                        <MenuItem.Icon>
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=export}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
                 </MenuItem>
                 <MenuItem Header="{lex:Loc WnExplorerMnuCreate}" Command="{Binding IsActiveCommand}" Style="{StaticResource ToolBarTopMenuitem}">
                     <MenuItem.Icon>
